samples/_failures_safe/1761319220_eb85b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70743bb4.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_70743bb4.c:144:13: error: expected declaration or statement at end of input
  144 |             dijkstra(graph, start);
      |             ^~~~~~~~
./samples/SAFE/__tmp_70743bb4.c:144:13: error: expected declaration or statement at end of input
